fix: layout issue

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,8 @@
 
 html,
 body,
-#root {
+#root,
+.App {
   height: 100%;
   width: 100%;
   font-family: "Inter", sans-serif;
